--- a/toc.html
+++ b/toc.html
@@ -16,7 +16,7 @@
                     <a href="index.html" name="" title="Home">Home</a>
                 </li>
                 <li>
-                    <a href="api/CG.Business.html" name="api/toc.html" title="Api Reference">Api Reference</a>
+                    <a href="api/CG.Business.Directors.html" name="api/toc.html" title="Api Reference">Api Reference</a>
                 </li>
                 <li>
                     <a href="http://github.com/codegator/CG.Business" name="" title="GitHub">GitHub</a>
